--- a/README.rdoc
+++ b/README.rdoc
@@ -75,18 +75,18 @@ instead) then you can just sudo apt-get install rtorrent and be done with it.
 
 * Setup the nginx config
     cd /etc/nginx/sites-enabled
-    sudo cp /srv/rutorrent.tigris.id.au/config/nginx/rutorrent.tigris.id.au .
+    sudo cp /srv/rutorrent.tigris.id.au/config/nginx/rutorrent.tigris.id.au.conf .
 
 * Permissions (you should do this again AFTER you've logged into ruttorent the
   first time, since it will create some default user files)
     sudo chown -R danial /srv/rutorrent.tigris.id.au
-    sudo chgrp -R www-data /srv/rutrrent.tigris.id.au/public/share
-    sudo chmod -R g+w /srv/rutrrent.tigris.id.au/public/share
+    sudo chgrp -R www-data /srv/rutorrent.tigris.id.au/public/share
+    sudo chmod -R g+w /srv/rutorrent.tigris.id.au/public/share
 
 === rTorrent setup
 
 * Configs
-    cp /srv/rutorrent.tigris.id.au/config/rtorrent/.rtorrent.rc /home/danial
+    cp /srv/rutorrent.tigris.id.au/config/rtorrent/danial.rtorrent.rc /home/danial
     mkdir -p /home/danial/.rtorrent/session
     mkdir -p /home/danial/.rtorrent/socket
     mkdir -p /home/danial/.rtorrent/watch
