Full path in readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -100,7 +100,7 @@ instead) then you can just sudo apt-get install rtorrent and be done with it.
 === Auto Deploy
 
 * Setup crontab
-    sudo cp config/cron/* /etc/cron.d
+    sudo cp /srv/rutorrent.tigris.id.au/config/cron/* /etc/cron.d
     sudo chown root.root /etc/cron.d/*
 
 == Troubleshooting
