--- a/README.rdoc
+++ b/README.rdoc
@@ -67,7 +67,7 @@ If you want the geoip plugin to work, you need the following as well.
 * Starting rTorrent. Add the following line to /etc/rc.local and run it as root
   if you want to start rtorrent right now.
     rm -f /home/danial/.rtorrent/socket/rpc.socket
-    su - danial -c '/usr/bin/screen -fa -d -m -S rtorrent /usr/local/bin/rtorrent'
+    su - danial -c '/usr/bin/screen -fa -d -m -S rtorrent /usr/bin/rtorrent'
 
 === Auto Deploy
 
