--- a/README.rdoc
+++ b/README.rdoc
@@ -31,36 +31,43 @@ If you want the geoip plugin to work, you need the following as well.
 
 === rTorrent
 
-The ubuntu version of rtorrent is not compiled with a new enough version of
-xmlrpc-c so we need to compile manually if we want rtorrent to be able to
-display info greater than 2GB (e.g. upload/download/torrent size info).
-
-If you are happy to live with the 2GB issue (it just displays negative numbers
-instead) then you can just sudo apt-get install rtorrent and be done with it.
+The debian version of rtorrent is over 2 years old, even in debian unstable
+so I find it best to just compile this from source.
 
 * Install subversion (it's the only way to get the required version of xmlrpc-c)
-    sudo apt-get install subversion
+    sudo apt-get -y install subversion
 
-* Install xmlrpc-c (you can apt-get remove --purge subversion after this if you want)
+* Install xmlrpc-c
     svn co http://xmlrpc-c.svn.sourceforge.net/svnroot/xmlrpc-c/advanced xmlrpc-c
     cd xmlrpc-c
     ./configure
     make
     sudo make install
+    cd ..
 
-* Install rtorrent (note: the "unstable" version of rtorrent is not supported by rutorrent)
-    wget http://libtorrent.rakshasa.no/downloads/libtorrent-0.12.9.tar.gz
-    wget http://libtorrent.rakshasa.no/downloads/rtorrent-0.8.9.tar.gz
-    tar zxf libtorrent-0.13.2.tar.gz
-    tar zxf rtorrent-0.9.2.tar.gz
-    cd libtorrent-0.12.9
+* Bleh, dependencies!
+    sudo apt-get install -y pkg-config libssl-dev libncurses5-dev libcurl4-gnutls-dev
+
+* Install rtorrent
+    wget http://libtorrent.rakshasa.no/downloads/libtorrent-0.13.4.tar.gz
+    wget http://libtorrent.rakshasa.no/downloads/rtorrent-0.9.4.tar.gz
+    tar xf libtorrent-*.tar.gz ; rm libtorrent-*.tar.gz
+    tar xf rtorrent-*tar.gz ; rm rtorrent-*.tar.gz
+    cd libtorrent-*
     ./configure
     make
     sudo make install
-    cd ../rtorrent-0.8.9/
+    cd ..
+    rm -rf libtorrent-*
+    cd rtorrent-*
     ./configure --with-xmlrpc-c=/usr/local/bin/xmlrpc-c-config
     make
     sudo make install
+    cd ..
+    rm -rf rtorrent-*
+
+* (optional) Uninstall subversion
+    sudo apt-get -y purge subversion
 
 === Website
 
