--- a/README.rdoc
+++ b/README.rdoc
@@ -56,8 +56,8 @@ so I find it best to just compile this from source.
     sudo apt-get install -y pkg-config libssl-dev libncurses5-dev libcurl4-gnutls-dev
 
 * Install rtorrent
-    wget http://libtorrent.rakshasa.no/downloads/libtorrent-0.13.4.tar.gz
-    wget http://libtorrent.rakshasa.no/downloads/rtorrent-0.9.4.tar.gz
+    wget http://rtorrent.net/downloads/libtorrent-0.13.6.tar.gz
+    wget http://rtorrent.net/downloads/rtorrent-0.9.6.tar.gz
     tar xf libtorrent-*.tar.gz ; rm libtorrent-*.tar.gz
     tar xf rtorrent-*tar.gz ; rm rtorrent-*.tar.gz
     cd libtorrent-*
